BPMS-357 - add SPI listener for external task execution stats